--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,8 +1,9 @@
 # Education Template
-- name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
+- name: San Jose State University
+  dates: August 2018 - May 2020
+  qualification: Master of Science, Software Engineering | GPA 3.76
   quote: >
-    Short institution or course description (optional)
+    #Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
-    Description of qualification
+    Specialization on Enterprise Software Development and Cloud Computing. |
+    Coursework on Distributed System development – Node, React, Express, MongoDB, Kafka & AWS; Enterprise Application Development – JAVA Spring
