--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,9 @@
 # Experience template
-- company: Company name
+- company: San Jose State University
   link: Link to company (optional)
-  job_title: Job title
-  dates: Date Range (eg. November 2016 - present)
+  job_title: Teaching Assistant
+  dates: January 2019 to Present
   quote: >
    Short description of the company (optional)
   description: | # this will include new lines to allow paragraphs
-    Description of role
+    I work as a Teaching assistant for the course Enterprise Distributed Systems by Professor Simon Shim. The focus of the course is distributed systems application development on MERN stack. The role involves assisting professor with assignment creation, grading, preparation of demos and collaborating with students. 
