--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -12,7 +12,7 @@
 
 - name: LinkedIn
   #link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-  github: https://github.com/Hariae/LinkedIn-Team1
+  github: /Hariae/LinkedIn-Team1
   quote: >
     Prototype of LinkedIn
   description: | # this will include new lines to allow paragraphs
@@ -22,8 +22,8 @@
 
 - name: Safety Quotient Predictor
   #link: Link to project (eg. sproogen.github.io/modern-resume-theme)(optional)
-  github: https://github.com/Hariae/Safety-Quotient-Predictor
-  quote: >
+  github: /Hariae/Safety-Quotient-Predictor
+  #quote: >
     #Prototype of LinkedIn
   description: | # this will include new lines to allow paragraphs
     The application will provide safety predictions based on past crime data.
