--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -5,10 +5,10 @@
   quote: >
     Prototype of HomeAway
   description: | # this will include new lines to allow paragraphs
-    The application has capability to browse through vacation homes and book the same for travelers, owners will be posting the properties to be rented out. |
+    The application has capability to browse through vacation homes and book the same for travelers, owners will be posting the properties to be rented out.
     |
     
-    The owner had feature to upload photos and provide description of the property. A messaging feature was made to enable communication between owner and traveler. |
+    The owner had feature to upload photos and provide description of the property. A messaging feature was made to enable communication between owner and traveler.
     |
 
     Technologies used are Node JS, React JS, Redux, Passport JS, MySQL MongoDB, Apache Kafka, Mocha. 
