Changes to experience

--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,5 +1,5 @@
 # Experience template
-- company: VMware
+- company: VMware, Palo Alto
   link: Link to company (optional)
   job_title: Software Engineering Intern
   dates: May 2019 – Present
